--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cellpy" %}
-{% set version = "0.4.0a4" %}
+{% set version = "0.4.0" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 722ebe3dc25e82b74b9a7538418d3ac32a31658d1544e4110b7058315c7e82de
+  sha256: 36e7050344f5dbd31a5684f847c256e10b2ec137efecefb853631e087bca6620
 
 build:
   noarch: python
@@ -24,7 +24,7 @@ requirements:
   run:
     - python >=3.6
     - numpy >=1.15
-    - xlrd >=1.2.0
+    - openpyxl >=3.0.5
     - matplotlib-base >=3.1.3
     - cryptography >=2.8
     - click >=7.1.1
