--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cellpy" %}
-{% set version = "0.4.1" %}
+{% set version = "0.4.2a3" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 50e81b862f3fa6f0e6c01987478faa3a2a074393174ca0999a27d0c770eb4550
+  sha256: 30fde8c3aac21daa21b29c3b6b2948f111560dc5846842d5ae9a4088a49790dd
 
 build:
   noarch: python
@@ -18,11 +18,11 @@ build:
 
 requirements:
   host:
-    - python >=3.6
+    - python >=3.8
     - pip >=20.0.2
     - setuptools >=38.6.0
   run:
-    - python >=3.6
+    - python >=3.8
     - numpy >=1.15
     - openpyxl >=3.0.5
     - matplotlib-base >=3.1.3
@@ -30,6 +30,7 @@ requirements:
     - click >=7.1.1
     - scipy >=1.4.1
     - pandas >=1.0
+    - sqlalchemy >=1.4
     - setuptools >=38.6.0
     - ruamel.yaml >=0.15.87
     - pyodbc >=4.0.16
