--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cellpy" %}
-{% set version = "1.0.0.post5" %}
+{% set version = "1.0.0.post7" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 9c479af7b4139a10b17b755202cf377298a3090f671883dce4afd16499d1d12a
+  sha256: 8ce753923c21984e7113206ae8e34e5ffd65090847d75df2a5cd80dde93cbe52
 
 build:
   noarch: python
@@ -18,37 +18,41 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python >=3.9, <3.12
     - pip >=20.0.2
     - setuptools >=38.6.0
   run:
-    - python >=3.9
-    - numpy >=1.15
-    - openpyxl >=3.0.5
-    - matplotlib-base >=3.1.3
-    - cryptography >=2.8
-    - click >=7.1.1
-    - scipy >=1.4.1
-    - pandas >=1.0
-    - sqlalchemy >=1.4
-    - setuptools >=38.6.0
-    - ruamel.yaml >=0.15.87
-    - pyodbc >=4.0.16
-    - PyGithub >=1.43.6
-    - cookiecutter >=1.7.0
-    - tqdm >=4.44.1
-    - ipython >=7.13.0
-    - ipywidgets >=7.5.1
-    - lmfit >=1.0.0
-    - ipykernel >=5.1.4
-    - pytables >=3.6.1
-    - python-box >=4.2.2
-    - pint >=0.20.1
-    - plotly >=5.14.1
-    - sqlalchemy >=2.0.0
-    - python-dotenv >=1.0.0
-    - fabric >=3.0.0
-    - rich >=13.0.0
+    - python >=3.9, <3.12
+    - PyGithub
+    - click>=8.1.3
+    - cookiecutter>=2.1.1
+    - coverage>=7.2.3
+    - cryptography>=40.0.2
+    - dateparser>=1.1.8
+    - fabric>=3.0.0
+    - hdf5>=1.14.0
+    - lmfit>=1.2.0
+    - matplotlib>=3.7.1
+    - numpy>=1.24.3
+    - openpyxl>=3.1.1
+    - pandas>=2.0.1
+    - pint>=0.20.1
+    - pip>=23.1.2
+    - pyodbc>=4.0.39
+    - pytables>=3.8.0
+    - pytest>=7.3.1
+    - pytest-benchmark>=4.0.0
+    - pytest-timeout>=2.1.0
+    - python-box>=7.0.1
+    - python-dotenv>=1.0.0
+    - python>=3.9
+    - rich>=13.5.1
+    - ruamel.yaml>=0.17.21
+    - scipy>=1.10.1
+    - setuptools>=67.7.2
+    - sqlalchemy>=2.0.11
+    - tqdm>=4.65.0
+    - xlrd>=2.0.1
 
 test:
   imports:
