--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,6 @@ requirements:
     - scipy >=1.12.0
     - setuptools >=69.0.3
     - sqlalchemy >=2.0.25
-    - sqlalchemy-access >=2.0.2
     - tqdm >=4.66.1
     - xlrd >=2.0.1
     - ipykernel >=6.29.0
@@ -53,6 +52,9 @@ requirements:
     - ipywidgets >=8.1.1
     - plotly >=5.18.0
     - pygithub >=2.2.0
+    - __unix  # [unix]
+    - __win   # [win]
+    - sqlalchemy-access >=2.0.2  # [win]
 
 test:
   imports:
