--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,9 +52,8 @@ requirements:
     - ipywidgets >=8.1.1
     - plotly >=5.18.0
     - pygithub >=2.2.0
-    - __unix  # [unix]
-    - __win   # [win]
-    - sqlalchemy-access >=2.0.2  # [win]
+    - __win
+    - sqlalchemy-access >=2.0.2
 
 test:
   imports:
