alpha5 1.0.1 advanced noarch with also appveyor

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,3 +6,8 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+provider:
+  win_64: appveyor
+noarch_platforms:
+  - linux_64
+  - win_64
