--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,13 +10,15 @@ source:
   sha256: e75ef66afc42d4d3bc0b74a5d985e9cd64d04fbe244bc7de68346aad91b9fa79
 
 build:
-  noarch: python
   number: 0
   entry_points:
     - cellpy=cellpy.cli:cli
-  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  script: {{ PYTHON }} -m pip install . -vv --no-deps
 
 requirements:
+  build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
   host:
     - python >=3.9, <3.12
     - pip >=20.0.2
@@ -52,8 +54,7 @@ requirements:
     - ipywidgets >=8.1.1
     - plotly >=5.18.0
     - pygithub >=2.2.0
-    - __linux
-    - __win
+    - sqlalchemy-access >=2.0.2  # [win]
 
 test:
   imports:
