--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -1,3 +1,6 @@
+build_platform:
+  linux_64: linux_64
+  win_64: win_64
 conda_forge_output_validation: true
 bot:
   automerge: true
@@ -6,3 +9,5 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+provider:
+  win: appveyor
