--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cellpy" %}
-{% set version = "1.0.1.a5" %}
+{% set version = "1.0.1a6" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: e75ef66afc42d4d3bc0b74a5d985e9cd64d04fbe244bc7de68346aad91b9fa79
+  sha256: e72ca88a60e3e00ae67f6253c5a795edbb1b0f8868d2053540fa43a657003707
 
 build:
   noarch: python
