--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,28 +1,31 @@
 {% set name = "cellpy" %}
 {% set version = "1.0.1a6" %}
 
+
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: e72ca88a60e3e00ae67f6253c5a795edbb1b0f8868d2053540fa43a657003707
+  sha256: e75ef66afc42d4d3bc0b74a5d985e9cd64d04fbe244bc7de68346aad91b9fa79
 
 build:
-  noarch: python
   number: 0
   entry_points:
     - cellpy=cellpy.cli:cli
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps
 
 requirements:
+  build:
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
   host:
-    - python >=3.9, <3.12
+    - python
     - pip >=20.0.2
     - setuptools >=38.6.0
   run:
-    - python >=3.9, <3.12
+    - python
     - click >=8.1.7
     - cookiecutter >=2.5.0
     - cryptography >=42.0.2
@@ -52,8 +55,7 @@ requirements:
     - ipywidgets >=8.1.1
     - plotly >=5.18.0
     - pygithub >=2.2.0
-    - __win
-    - sqlalchemy-access >=2.0.2
+    - sqlalchemy-access >=2.0.2  # [win]
 
 test:
   imports:
