--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,24 +12,22 @@ source:
 
 build:
   number: 0
+  skip: true  # [py<3.9 or py>3.11]
   entry_points:
     - cellpy=cellpy.cli:cli
-  script: {{ PYTHON }} -m pip install . -vv --no-deps
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 requirements:
   build:
-    - python                                 # [build_platform != target_platform]
-    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - python
   host:
     - python
-    - pip >=20.0.2
-    - setuptools >=38.6.0
+    - pip
+    - setuptools >62
   run:
-    - python >=3.9<3.12
-    - click >=8.1.7
+    - python
+    - click
     - cookiecutter >=2.5.0
-    - cryptography >=42.0.2
-    - dateparser >=1.2.0
     - fabric >=3.2.2
     - hdf5 >=1.14.3
     - lmfit >=1.2.2
@@ -38,7 +36,7 @@ requirements:
     - openpyxl >=3.1.2
     - pandas >=2.2.0
     - pint >=0.23
-    - pip >=24.0
+    - pip
     - pyodbc >=5.0.1
     - pytables >=3.9.2
     - python-box >=7.1.1
@@ -46,8 +44,8 @@ requirements:
     - rich >=13.7.0
     - ruamel.yaml >=0.18.5
     - scipy >=1.12.0
-    - setuptools >=69.0.3
-    - sqlalchemy >=2.0.25
+    - setuptools >62
+    - sqlalchemy >2.0.25
     - tqdm >=4.66.1
     - xlrd >=2.0.1
     - ipykernel >=6.29.0
