--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,7 +45,7 @@ requirements:
     - ruamel.yaml >=0.18.5
     - scipy >=1.12.0
     - setuptools >62
-    - sqlalchemy >2.0.25
+    - sqlalchemy >=2.0.25
     - tqdm >=4.66.1
     - xlrd >=2.0.1
     - ipykernel >=6.29.0
